deps/jansson/test/suites/invalid/lone-open-bracket/error.strip
1 1 1
']' expected near end of file
